DEV: Update linting

--- a/javascripts/discourse/connectors/timeline-controls-before/topic-print.hbs
+++ b/javascripts/discourse/connectors/timeline-controls-before/topic-print.hbs
@@ -1,4 +1,4 @@
 <PrintTopicButton
-  @currentUser={{currentUser}}
+  @currentUser={{this.currentUser}}
   @fullScreen={{@outletArgs.topicProgressExpanded}}
 />
